Adding ParticlesJS on First Section
* Changing Background Image
* Fixing Preloader Component

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -282,3 +282,37 @@
         }
     }
 }
+
+
+#headline {
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    display: block;
+    z-index: 999;
+    pointer-events: none;
+    .image-headline{
+        position: absolute;;
+        z-index: 999;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        background-image: url(../img/Headline.png);    background-repeat: no-repeat;
+        width: 800px;
+        height: 580px;
+        margin: auto;
+    }
+}
+
+#particles-js {
+    position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+  display: block;
+}
+
+.scroll-down{
+    z-index: 1000!important;
+}
