--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -342,6 +342,7 @@ body #wrapper{
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
+    border: 0;
 }
 
 #header.fixed.transparent{
@@ -455,10 +456,10 @@ section{
                 //     display: block!important;
                 // }
                 // .slide{
-                    img{
-                        width: 100%;
-                        height: 100%;
-                    }
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
                 // }
             }
         }
