--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -352,3 +352,22 @@
         display: block;
     }
 }
+
+
+#about-me,#ilove2code{
+    // width: 100vw!important;
+    // height: 100vh!important;
+    background: #fff;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    .title{
+        color: #340329;
+        line-height: 10rem;
+        font-size: 10rem;
+    }
+
+    .desc{
+        color: #340329;
+    }
+}
