--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -354,7 +354,7 @@
 }
 
 
-#about-me,#ilove2code{
+#about-me,#ilove2code,#iguessitsyou,#whatsnext,#thingsido,#hiremeif{
     // width: 100vw!important;
     // height: 100vh!important;
     background: #fff;
