--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -354,20 +354,25 @@
 }
 
 
-#about-me,#ilove2code,#iguessitsyou,#whatsnext,#thingsido,#hiremeif{
+#about-me,#ilove2code,#iguessitsyou,#whatsnext,#thingsido,#hiremeif,#wannaknowmore{
     // width: 100vw!important;
     // height: 100vh!important;
     background: #fff;
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
+    color: #340329!important;
     .title{
-        color: #340329;
+        color: #340329!important;
         line-height: 10rem;
         font-size: 10rem;
     }
 
     .desc{
-        color: #340329;
+        color: #340329!important;
+    }
+
+    .btn,p,div{
+        color: #340329!important;
     }
 }
