Setting Header on Single Pages

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -376,3 +376,21 @@
         color: #340329!important;
     }
 }
+
+#header{
+    border-top-color: #b92d03;
+    #topNav{
+        a.logo{
+
+                height: 60px;
+            img{
+                height: 60px;
+                border: 0;
+            }
+
+            &.orange{
+                color: #b92d03;
+            }
+        }
+    }
+}
